--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "redux-rest-reducer",
-  "version": "0.5.0",
-  "description": "Restfull reducer for redux",
+  "name": "rest-reducer-redux",
+  "version": "1.0.0",
+  "description": "Restful reducer for redux",
   "main": "./distribution/index.js",
   "module": "distribution/index.js",
-  "repository": "git@github.com:sandeepguggu/rest-reducer.git",
-  "author": "Sandeep Gunduboyina <sandeepgy11@gmail.com>",
+  "repository": "git@github.com:thisizmohit/rest-reducer.git",
+  "author": "Mohit Garg <mohit@gargmohit.com>",
   "license": "MIT",
   "peerDependencies": {
     "uuid": "^3.3.2",
